[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "middah"
version = "0.1.0"
description = "Scalable Recipe Viewer"
authors = [{ name = "Henrik Aasen Kjeldsberg", email = "henrik.kjeldsberg@live.no" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.112.0",
    "uvicorn==0.30.6",
    "requests==2.32.3",
    "loguru==0.7.2",
    "sqlalchemy==2.0.36",
]

[project.optional-dependencies]
test = [
    "isort>=5.13.2",
    "pytest>=8.3.2",
    "pytest-mock>=3.14.0",
    "flake8>=7.1.1",
    "black>=24.8.0",
    "bandit>=1.7.9",
]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = ['tests']
